Can edit informationtype name, Codelist GDPR_ARTICLE, count process by purpose